Fix z-index and height, reorder properties alphabetically

--- a/form-utils.css
+++ b/form-utils.css
@@ -6,41 +6,43 @@
 }
 
 .arrow-steps .step {
-  font-size: 16px;
-	text-align: center;
-	color: #666;
+  background-color: #d9e3f7;
+  color: #666;
 	cursor: default;
+  font-size: 16px;
+  line-height: 16px;
 	margin: 0 3px;
-	padding: 10px 10px 10px 30px;
 	min-width: 180px;
+  padding: 10px 10px 10px 30px;
 	position: relative;
-	background-color: #d9e3f7;
-	-webkit-user-select: none;
+  text-align: center;
+  transition: background-color 0.2s ease;
+  -webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
-	user-select: none; 
-  transition: background-color 0.2s ease;
+	user-select: none;
+  z-index: 999999;
 }
 
 .arrow-steps .step:after,
 .arrow-steps .step:before {
-	content: " ";
-	position: absolute;
-	top: 0;
-	right: -17px;
-	width: 0;
-	height: 0;
-	border-top: 19px solid transparent;
 	border-bottom: 17px solid transparent;
-	border-left: 17px solid #d9e3f7;	
-	z-index: 2;
+  border-left: 17px solid #d9e3f7;
+  border-top: 19px solid transparent;
+  content: " ";
+	height: 0;
+  position: absolute;
+  right: -17px;
+  top: 0;
   transition: border-color 0.2s ease;
+  width: 0;
+  z-index: 2;
 }
 
 .arrow-steps .step:before {
-	right: auto;
+  border-left: 17px solid #fff;	
 	left: 0;
-	border-left: 17px solid #fff;	
+  right: auto;
 	z-index: 0;
 }
 
@@ -49,13 +51,13 @@
 }
 
 .arrow-steps .step:first-child {
-	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
 }
 
 .arrow-steps .step.current {
-	color: #fff;
 	background-color: #23468c;
+  color: #fff;
 }
 
 .arrow-steps .step.current:after {
